--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "generator-angular-gabe",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Yeoman generator",
   "license": "MIT",
   "main": "app/index.js",
-  "repository": "garbles/generator-angular-gabe",
+  "repository": "https://github.com/garbles/generator-angular-gabe",
   "author": {
     "name": "Gabe Scholz",
     "email": "info@garbl.es",
